--- a/index.html
+++ b/index.html
@@ -176,7 +176,11 @@
                 <a href="#" class="show-more">Afficher plus</a>
             </section>
             <section class="popular">
-                <h2>Les plus populaires</h2>
+                <div class="title">
+                    <h2>Les plus populaires</h2>
+                    <img src="images/icon/Vector.svg" class="vector">
+                </div>
+        
                 <div class="cards">
                     <a href="#">
                         <div class="card">
