--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <div class="navbar">
-        <image src ="images/logo/Booki.png" class="logo">
+        <image src ="images/logo/Booki.svg" class="logo">
             <ul>
                 <li><a href="#">Hébergement</a></li>
                 <li><a href="#">Activité</a></li>
