--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
     <div class="navbar">
-        <image src ="images/logo/Booki.svg" class="logo">
+        <img src ="images/logo/Booki.svg" alt="logo=" class="logo">
             <ul>
                 <li><a href="#">Hébergement</a></li>
                 <li><a href="#">Activité</a></li>
@@ -39,8 +39,9 @@
 
         <form class="search-bar">
             <div class="marker-icon"><i class="fa fa-map-marker"></i></div>
-            <input type="text" name="" value ="Marseille, France" placeholder="Où allez-vous ?">
+            <input type="text" name="ville" value ="Marseille, France" placeholder="Où allez-vous ?">
             <button class="btn-search">Rechercher</button>
+            <button class="btn-search2"><i class="fa-solid fa-magnifying-glass" style="color: #ffffff;"></i></button>
         </form>
 
         <div class="filtres">
@@ -55,7 +56,7 @@
 
         <div class="info">
             <div class="icon-container">
-                <img src="images/icon/fa-info.svg" class="icon-info">
+                <img src="images/icon/fa-info.svg" alt="information" class="icon-info">
             </div>
             <p>Plus de 500 hébergements sont disponible dans cette ville</p>
         </div>
@@ -66,7 +67,7 @@
                 <div class="cards">
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/port.jpg">
+                            <img src="images/hebergements/port.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Hôtel du port</h4>
@@ -84,7 +85,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/amina.jpg">
+                            <img src="images/hebergements/amina.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Hôtel Chez Amina</h4>
@@ -102,7 +103,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/mouette.jpg">
+                            <img src="images/hebergements/mouette.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Hôtel Les mouettes</h4>
@@ -120,7 +121,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/mer.jpg">
+                            <img src="images/hebergements/mer.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Hôtel de la mer</h4>
@@ -138,7 +139,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/auberge.jpg">
+                            <img src="images/hebergements/auberge.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Auberge La Canebière</h4>
@@ -156,7 +157,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/panier.jpg">
+                            <img src="images/hebergements/panier.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Auberge Le Panier</h4>
@@ -178,13 +179,13 @@
             <section class="popular">
                 <div class="title">
                     <h2>Les plus populaires</h2>
-                    <img src="images/icon/Vector.svg" class="vector">
+                    <img src="images/icon/Vector.svg" alt="vecteur" class="vector">
                 </div>
         
                 <div class="cards">
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/canebiere.jpg">
+                            <img src="images/hebergements/canebiere.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Auberge de la Canebière</h4>
@@ -202,7 +203,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/Coeur.jpg">
+                            <img src="images/hebergements/Coeur.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Chambre d'hôtes Au coeur de l'eau</h4>
@@ -220,7 +221,7 @@
                     </a>
                     <a href="#">
                         <div class="card">
-                            <img src="images/hebergements/bleublanc.jpg">
+                            <img src="images/hebergements/bleublanc.jpg" alt="chambre d'hotel">
                             <div class="container">
                                 <div class="description">
                                     <h4>Hôtel Bleu et Blanc</h4>
@@ -245,7 +246,7 @@
             <div class="cards">
                 <a href="#">
                     <div class="card">
-                        <img src="images/activites/vieux-port.jpg">
+                        <img src="images/activites/vieux-port.jpg" alt="a  ctivité">
                         <div class="container">
                             <div class="description">
                                 <h4>
@@ -257,7 +258,7 @@
                 </a>
                 <a href="#">
                     <div class="card">
-                        <img src="images/activites/fort.jpg">
+                        <img src="images/activites/fort.jpg" alt="activité">
                         <div class="container">
                             <div class="description">
                                 <h4>
@@ -269,7 +270,7 @@
                 </a>
                 <a href="#">
                     <div class="card">
-                        <img src="images/activites/calanque.jpg">
+                        <img src="images/activites/calanque.jpg" alt="activité">
                         <div class="container">
                             <div class="description">
                                 <h4>
@@ -281,7 +282,7 @@
                 </a>
                 <a href="#">
                     <div class="card">
-                        <img src="images/activites/dame.jpg">
+                        <img src="images/activites/dame.jpg" alt="activité">
                         <div class="container">
                             <div class="description">
                                 <h4>
@@ -321,18 +322,5 @@
             </div>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
 </body>
 </html>
